--- a/civictrack/src/app/page.html
+++ b/civictrack/src/app/page.html
@@ -390,7 +390,7 @@
             </div>
             
             <p style="text-align: center; color: #666; margin-bottom: 20px;">
-                User can also able to see nearby issues without Login
+                User are also able to see nearby issues without Login
             </p>
             
             <div class="search-container">
